--- a/zft-adapter/pom.xml
+++ b/zft-adapter/pom.xml
@@ -5,7 +5,6 @@
         <groupId>cdu.jhb</groupId>
         <artifactId>zft-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>zft-adapter</artifactId>
@@ -25,6 +24,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
     </dependencies>
 
