登录功能实现

--- a/start/src/main/resources/application.yaml
+++ b/start/src/main/resources/application.yaml
@@ -15,4 +15,7 @@ spring:
 
 mybatis-plus:
   mapper-locations: classpath*:mybatis/*Mapper.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    map-underscore-to-camel-case: false
 
