--- a/zft-domain/pom.xml
+++ b/zft-domain/pom.xml
@@ -26,6 +26,17 @@
             <groupId>cdu.jhb</groupId>
             <artifactId>zft-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>4.3.1</version>
+        </dependency>
+        <!-- fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.62</version>
+        </dependency>
     </dependencies>
 
     <build>
