--- a/start/src/main/resources/application.yaml
+++ b/start/src/main/resources/application.yaml
@@ -14,7 +14,7 @@ spring:
     suffix: .html
 
 mybatis-plus:
-  mapper-locations: classpath*:mybatis/*Mapper.xml
+  mapper-locations: classpath*:mybatis/*/*Mapper.xml
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: false
