--- a/zft-infrastructure/pom.xml
+++ b/zft-infrastructure/pom.xml
@@ -60,5 +60,9 @@
             <artifactId>dozer-core</artifactId>
             <version>6.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
