--- a/zft-infrastructure/pom.xml
+++ b/zft-infrastructure/pom.xml
@@ -47,6 +47,12 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
             <version>4.3.1</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jedis</artifactId>
+                    <groupId>redis.clients</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- fastjson -->
