--- a/start/src/main/resources/application.yaml
+++ b/start/src/main/resources/application.yaml
@@ -17,5 +17,5 @@ mybatis-plus:
   mapper-locations: classpath*:mybatis/*/*Mapper.xml
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-    map-underscore-to-camel-case: false
+    map-underscore-to-camel-case: true
 
